Updated Extent Reports

--- a/src/test/resources/spark-config.html
+++ b/src/test/resources/spark-config.html
@@ -1,4 +1,3 @@
-<!-- src/test/resources/spark-config.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,6 +13,12 @@
             <tab name="Scenarios">Scenarios</tab>
             <tab name="Bugs/Defects">Bugs/Defects</tab>
         </tabDisplayNames>
+        <stylesheets>
+            <stylesheet>extent-custom.css</stylesheet>
+        </stylesheets>
+        <scripts>
+            <script>extent-custom.js</script>
+        </scripts>
     </configuration>
 </head>
 <body>
